--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ anyhow = "1.0"
 thiserror = "2.0"
 uuid = { version = "1.19", features = ["v4", "serde"] }
 rayon = "1.11.0"
+ureq = { version = "2.12", features = ["json", "tls"] }
+urlencoding = "2.1"
+image = { version = "0.25", features = ["webp", "png", "jpeg"] }
 
 [profile.release]
 lto = true
