--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iced = { version = "0.14", features = ["tokio", "debug", "canvas", "image", "svg"] }
+iced = { version = "0.14", features = ["tokio", "debug", "canvas", "image", "svg", "advanced"] }
 tokio = { version = "1.48", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -22,6 +22,7 @@ rayon = "1.11.0"
 ureq = { version = "2.12", features = ["json", "tls"] }
 urlencoding = "2.1"
 image = { version = "0.25", features = ["webp", "png", "jpeg"] }
+procfs = "0.17"
 
 [profile.release]
 lto = true
