feat: Replace SVG system icons with FontAwesome via iced_fonts
- Add iced_fonts dependency with fontawesome feature
- Create icons module with FontAwesome icon helpers
- Add SystemIcon enum to model for type-safe icon selection
- Update system items (shutdown, suspend, update, exit) to use FontAwesome
- Remove embedded SVG assets and related asset loading code
- Simplify render_icon by removing embedded asset handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ ureq = { version = "2.12", features = ["json", "tls"] }
 urlencoding = "2.1"
 image = { version = "0.25", features = ["webp", "png", "jpeg"] }
 procfs = "0.17"
+iced_fonts = { version = "0.3", features = ["fontawesome"] }
 
 [profile.release]
 lto = true
