--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 iced = { version = "0.14", features = ["tokio", "debug", "canvas", "image", "svg", "advanced"] }
-tokio = { version = "1.48", features = ["full"] }
+tokio = { version = "1.49", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1"
@@ -19,9 +19,10 @@ uuid = { version = "1.19", features = ["v4", "serde"] }
 rayon = "1.11.0"
 ureq = { version = "2.12", features = ["json", "tls"] }
 urlencoding = "2.1"
-image = { version = "0.25", features = ["webp", "png", "jpeg"] }
-procfs = "0.17"
-iced_fonts = { version = "0.3", features = ["fontawesome"] }
+image = { version = "0.25", features = ["png", "jpeg"] }
+procfs = "0.18"
+ iced_fonts = { version = "0.3", features = ["fontawesome"] }
+self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
 
 [profile.release]
 lto = true
