Refactor UI components and improve system update handling
- Extract UI components into separate modules (messages, sys_utils, ui_main_view)
- Improve system update modal with better state management
- Refactor game sources handling with cleaner structure
- Reduce main.rs complexity by extracting functionality
- Add new message types and utility functions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,11 @@ self_update = { version = "0.42.0", features = ["rustls"], default-features = fa
 lto = true
 codegen-units = 1
 strip = true
+
+# Profiling profile - optimized with debug symbols (faster build than full release)
+[profile.profiling]
+inherits = "release"
+debug = true
+strip = false
+lto = false
+codegen-units = 16
