feat: migrate to musl-based static builds using rust-musl-cross
- Add musl-specific mimalloc dependency for optimized memory allocation
- Replace glibc aarch64 builds with musl-based targets for both x86_64 and aarch64
- Update Cross.toml to use rust-musl-cross pre-built Docker images
- Update CI/CD workflow with matrix strategy for parallel musl builds
- Remove custom Dockerfile (now using rust-musl-cross images)
- All builds now produce static musl libc binaries for maximum portability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ iced_fonts = { version = "0.3", features = ["fontawesome"] }
 self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
 chrono = "0.4.42"
 
+[target.'cfg(target_env = "musl")'.dependencies]
+mimalloc = "0.1.43"
+
 [profile.release]
 lto = true
 codegen-units = 1
