--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,14 @@ jobs:
           STEAMGRIDDB_API_KEY: ${{ secrets.STEAMGRIDDB_API_KEY }}
         run: cargo build --release
 
-  arm-check:
+  musl-build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        target:
+          - x86_64-unknown-linux-musl
+          - aarch64-unknown-linux-musl
 
     steps:
       - name: Checkout code
@@ -52,7 +58,7 @@ jobs:
       - name: Install rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: aarch64-unknown-linux-gnu
+          targets: ${{ matrix.target }}
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
@@ -60,7 +66,7 @@ jobs:
       - name: Install cross
         run: cargo install cross
 
-      - name: Build ARM64 release
+      - name: Build ${{ matrix.target }} musl release
         env:
           STEAMGRIDDB_API_KEY: ${{ secrets.STEAMGRIDDB_API_KEY }}
-        run: cross build --target aarch64-unknown-linux-gnu --release
+        run: cross build --target ${{ matrix.target }} --release
