--- a/Cross.toml
+++ b/Cross.toml
@@ -1,2 +1,5 @@
-[target.aarch64-unknown-linux-gnu]
-dockerfile = "./docker/Dockerfile.aarch64"
+[target.x86_64-unknown-linux-musl]
+image = "ghcr.io/rust-cross/rust-musl-cross:x86_64-musl"
+
+[target.aarch64-unknown-linux-musl]
+image = "ghcr.io/rust-cross/rust-musl-cross:aarch64-musl"
