--- a/.releaserc
+++ b/.releaserc
@@ -17,6 +17,21 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
-    "@semantic-release/github"
+    [
+      "@semantic-release/github",
+      {
+        "assets": [
+          {
+            "path": "release-artifacts/linux-tv-launcher-x86_64-unknown-linux-musl.tar.gz",
+            "label": "x86_64 Linux (musl)"
+          },
+          {
+            "path": "release-artifacts/linux-tv-launcher-aarch64-unknown-linux-musl.tar.gz",
+            "label": "ARM64 Linux (musl)"
+          }
+        ],
+        "successComment": "🎉 This release has been published! Download the binaries for your platform:\n\n- **x86_64**: linux-tv-launcher-x86_64-unknown-linux-musl.tar.gz\n- **ARM64**: linux-tv-launcher-aarch64-unknown-linux-musl.tar.gz\n\nTo use with `self_update`, the app will automatically fetch and install the correct binary."
+      }
+    ]
   ]
 }
