--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
         run: cargo build --release
 
   build-x64:
+    needs: [check]
     runs-on: ubuntu-latest
     name: Build x86_64-unknown-linux-musl
 
@@ -73,20 +74,15 @@ jobs:
       - name: Strip binary
         run: strip target/x86_64-unknown-linux-musl/release/linux-tv-launcher
 
-      - name: Create tar.gz archive
-        run: |
-          cd target/x86_64-unknown-linux-musl/release
-          tar -czf ../../../linux-tv-launcher-x86_64-unknown-linux-musl.tar.gz linux-tv-launcher
-          cd -
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-tv-launcher-x86_64-unknown-linux-musl
-          path: linux-tv-launcher-x86_64-unknown-linux-musl.tar.gz
+          name: linux-tv-launcher-x86_64
+          path: target/x86_64-unknown-linux-musl/release/linux-tv-launcher
           retention-days: 1
 
   build-arm64:
+    needs: [check]
     runs-on: ubuntu-arm64
     name: Build aarch64-unknown-linux-musl
 
@@ -119,17 +115,11 @@ jobs:
       - name: Strip binary
         run: strip target/aarch64-unknown-linux-musl/release/linux-tv-launcher
 
-      - name: Create tar.gz archive
-        run: |
-          cd target/aarch64-unknown-linux-musl/release
-          tar -czf ../../../linux-tv-launcher-aarch64-unknown-linux-musl.tar.gz linux-tv-launcher
-          cd -
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-tv-launcher-aarch64-unknown-linux-musl
-          path: linux-tv-launcher-aarch64-unknown-linux-musl.tar.gz
+          name: linux-tv-launcher-aarch64
+          path: target/aarch64-unknown-linux-musl/release/linux-tv-launcher
           retention-days: 1
 
   release:
@@ -152,13 +142,13 @@ jobs:
       - name: Download x64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: linux-tv-launcher-x86_64-unknown-linux-musl
+          name: linux-tv-launcher-x86_64
           path: ./release-artifacts/
 
       - name: Download ARM64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: linux-tv-launcher-aarch64-unknown-linux-musl
+          name: linux-tv-launcher-aarch64
           path: ./release-artifacts/
 
       - name: List artifacts
