--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ procfs = "0.18"
 iced_fonts = { version = "0.3", features = ["fontawesome"] }
 self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
 chrono = "0.4.42"
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
 
 [target.'cfg(target_env = "musl")'.dependencies]
 mimalloc = "0.1.43"
