--- a/.releaserc
+++ b/.releaserc
@@ -7,13 +7,13 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "echo ${nextRelease.version} > .version"
+        "prepareCmd": "echo ${nextRelease.version} > .version && sed -i 's/^version = \".*\"/version = \"${nextRelease.version}\"/' Cargo.toml && cargo check"
       }
     ],
     [
       "@semantic-release/git",
       {
-        "assets": [".version", "CHANGELOG.md"],
+        "assets": [".version", "CHANGELOG.md", "Cargo.toml", "Cargo.lock"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
