fix(ci): package binaries as tar.gz and disable wayland to fix panic

--- a/.releaserc
+++ b/.releaserc
@@ -22,15 +22,15 @@
       {
         "assets": [
           {
-            "path": "release-artifacts/linux-tv-launcher-x86_64",
-            "label": "x86_64 Linux (musl)"
+            "path": "release-artifacts/linux-tv-launcher-x86_64.tar.gz",
+            "label": "x86_64 Linux (musl, tar.gz)"
           },
           {
-            "path": "release-artifacts/linux-tv-launcher-aarch64",
-            "label": "ARM64 Linux (musl)"
+            "path": "release-artifacts/linux-tv-launcher-aarch64.tar.gz",
+            "label": "ARM64 Linux (musl, tar.gz)"
           }
         ],
-        "successComment": "🎉 This release has been published! Download the binaries for your platform:\n\n- **x86_64**: linux-tv-launcher-x86_64\n- **ARM64**: linux-tv-launcher-aarch64\n\nTo use with `self_update`, the app will automatically fetch and install the correct binary."
+        "successComment": "🎉 This release has been published! Download the binaries for your platform:\n\n- **x86_64**: linux-tv-launcher-x86_64.tar.gz\n- **ARM64**: linux-tv-launcher-aarch64.tar.gz\n\nTo use with `self_update`, the app will automatically fetch and install the correct binary."
       }
     ]
   ]
