--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,11 +112,14 @@ jobs:
       - name: Strip binary
         run: musl-strip target/x86_64-unknown-linux-musl/release/linux-tv-launcher
 
+      - name: Package binary
+        run: tar -C target/x86_64-unknown-linux-musl/release -czvf linux-tv-launcher-x86_64.tar.gz linux-tv-launcher
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-tv-launcher-x86_64
-          path: target/x86_64-unknown-linux-musl/release/linux-tv-launcher
+          path: linux-tv-launcher-x86_64.tar.gz
           retention-days: 1
 
   build-arm64:
@@ -166,11 +169,14 @@ jobs:
       - name: Strip binary
         run: musl-strip target/aarch64-unknown-linux-musl/release/linux-tv-launcher
 
+      - name: Package binary
+        run: tar -C target/aarch64-unknown-linux-musl/release -czvf linux-tv-launcher-aarch64.tar.gz linux-tv-launcher
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-tv-launcher-aarch64
-          path: target/aarch64-unknown-linux-musl/release/linux-tv-launcher
+          path: linux-tv-launcher-aarch64.tar.gz
           retention-days: 1
 
   release:
@@ -215,8 +221,8 @@ jobs:
       - name: Prepare release artifacts
         run: |
           # Move and rename artifacts to the expected location for semantic-release
-          mv ./release-artifacts/x86_64/linux-tv-launcher ./release-artifacts/linux-tv-launcher-x86_64
-          mv ./release-artifacts/aarch64/linux-tv-launcher ./release-artifacts/linux-tv-launcher-aarch64
+          mv ./release-artifacts/x86_64/linux-tv-launcher-x86_64.tar.gz ./release-artifacts/linux-tv-launcher-x86_64.tar.gz
+          mv ./release-artifacts/aarch64/linux-tv-launcher-aarch64.tar.gz ./release-artifacts/linux-tv-launcher-aarch64.tar.gz
           
           # Clean up empty directories
           rmdir ./release-artifacts/x86_64 ./release-artifacts/aarch64
