--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-iced = { version = "0.14", features = ["tokio", "debug", "canvas", "image", "svg", "advanced", "lazy"] }
+iced = { version = "0.14", default-features = false, features = ["tokio", "wgpu", "debug", "canvas", "image", "svg", "advanced", "lazy", "x11"] }
 tokio = { version = "1.49", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
