--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
 
   build-arm64:
     needs: [ check ]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     name: Build aarch64-unknown-linux-gnu
 
     steps:
@@ -116,21 +116,18 @@ jobs:
       - name: Install rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install Cross
-        uses: taiki-e/install-action@cross
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libudev-dev libasound2-dev pkg-config libwayland-dev libxkbcommon-dev libfontconfig1-dev
 
       - name: Build release
         env:
           STEAMGRIDDB_API_KEY: ${{ secrets.STEAMGRIDDB_API_KEY }}
-        run: cross build --release --target aarch64-unknown-linux-gnu
-
-      - name: Install strip tool
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y binutils-aarch64-linux-gnu
+        run: cargo build --release --target aarch64-unknown-linux-gnu
 
       - name: Strip binary
-        run: aarch64-linux-gnu-strip target/aarch64-unknown-linux-gnu/release/linux-tv-launcher
+        run: strip target/aarch64-unknown-linux-gnu/release/linux-tv-launcher
 
       - name: Package binary
         run: tar -C target/aarch64-unknown-linux-gnu/release -czvf linux-tv-launcher-aarch64.tar.gz linux-tv-launcher
