--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "1.0.1"
 edition = "2021"
 
 [dependencies]
-iced = { version = "0.14", features = ["tokio", "debug", "canvas", "image", "svg", "advanced", "lazy", "wayland", "x11"] }
-tokio = { version = "1.49", features = ["full"] }
+iced = { version = "0.14", features = ["tokio", "image", "svg"] }
+tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "time", "process", "io-util", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 directories = "6.0"
@@ -17,11 +17,11 @@ uuid = { version = "1.19", features = ["v4", "serde"] }
 rayon = "1.11.0"
 ureq = { version = "3.1", features = ["json", "rustls"] }
 urlencoding = "2.1"
-image = { version = "0.25", features = ["png", "jpeg"] }
+image = { version = "0.25", features = ["png", "jpeg", "webp"] }
 procfs = "0.18"
 iced_fonts = { version = "0.3", features = ["fontawesome"] }
 self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
-chrono = "0.4.42"
+chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
 
