--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,13 +93,13 @@ jobs:
         run: strip target/x86_64-unknown-linux-gnu/release/linux-tv-launcher
 
       - name: Package binary
-        run: tar -C target/x86_64-unknown-linux-gnu/release -czvf linux-tv-launcher-x86_64.tar.gz linux-tv-launcher
+        run: install -m 755 target/x86_64-unknown-linux-gnu/release/linux-tv-launcher linux-tv-launcher-x86_64-unknown-linux-gnu
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-tv-launcher-x86_64
-          path: linux-tv-launcher-x86_64.tar.gz
+          name: linux-tv-launcher-x86_64-unknown-linux-gnu
+          path: linux-tv-launcher-x86_64-unknown-linux-gnu
           retention-days: 1
 
   build-arm64:
@@ -130,13 +130,13 @@ jobs:
         run: strip target/aarch64-unknown-linux-gnu/release/linux-tv-launcher
 
       - name: Package binary
-        run: tar -C target/aarch64-unknown-linux-gnu/release -czvf linux-tv-launcher-aarch64.tar.gz linux-tv-launcher
+        run: install -m 755 target/aarch64-unknown-linux-gnu/release/linux-tv-launcher linux-tv-launcher-aarch64-unknown-linux-gnu
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-tv-launcher-aarch64
-          path: linux-tv-launcher-aarch64.tar.gz
+          name: linux-tv-launcher-aarch64-unknown-linux-gnu
+          path: linux-tv-launcher-aarch64-unknown-linux-gnu
           retention-days: 1
 
   release:
@@ -169,23 +169,23 @@ jobs:
       - name: Download x64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: linux-tv-launcher-x86_64
-          path: ./release-artifacts/x86_64
+          name: linux-tv-launcher-x86_64-unknown-linux-gnu
+          path: ./release-artifacts/x86_64-unknown-linux-gnu
 
       - name: Download ARM64 artifact
         uses: actions/download-artifact@v4
         with:
-          name: linux-tv-launcher-aarch64
-          path: ./release-artifacts/aarch64
+          name: linux-tv-launcher-aarch64-unknown-linux-gnu
+          path: ./release-artifacts/aarch64-unknown-linux-gnu
 
       - name: Prepare release artifacts
         run: |
           # Move and rename artifacts to the expected location for semantic-release
-          mv ./release-artifacts/x86_64/linux-tv-launcher-x86_64.tar.gz ./release-artifacts/linux-tv-launcher-x86_64.tar.gz
-          mv ./release-artifacts/aarch64/linux-tv-launcher-aarch64.tar.gz ./release-artifacts/linux-tv-launcher-aarch64.tar.gz
+          mv ./release-artifacts/x86_64-unknown-linux-gnu/linux-tv-launcher-x86_64-unknown-linux-gnu ./release-artifacts/linux-tv-launcher-x86_64-unknown-linux-gnu
+          mv ./release-artifacts/aarch64-unknown-linux-gnu/linux-tv-launcher-aarch64-unknown-linux-gnu ./release-artifacts/linux-tv-launcher-aarch64-unknown-linux-gnu
           
           # Clean up empty directories
-          rmdir ./release-artifacts/x86_64 ./release-artifacts/aarch64
+          rmdir ./release-artifacts/x86_64-unknown-linux-gnu ./release-artifacts/aarch64-unknown-linux-gnu
           
           echo "Artifacts ready for release:"
           ls -lh ./release-artifacts/
