--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "2.0.3"
 edition = "2021"
 
 [dependencies]
-iced = { version = "0.14", features = ["tokio", "image", "svg"] }
+iced = { version = "0.14", features = ["tokio", "image", "svg", "canvas"] }
 tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "time", "process", "io-util", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
