--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ self_update = { version = "0.42.0", features = ["rustls"], default-features = fa
 chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
 tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
+semver = "1.0.27"
 
 [target.'cfg(target_env = "musl")'.dependencies]
 mimalloc = "0.1.43"
