--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,17 @@ rayon = "1.11.0"
 ureq = { version = "3.1", features = ["json", "rustls"] }
 urlencoding = "2.1"
 zbus = { version = "5.13", features = ["tokio"] }
+zbus_polkit = "4.0"
+zeroize = { version = "1.8", features = ["derive"] }
 image = { version = "0.25", features = ["png", "jpeg", "webp"] }
 procfs = "0.18"
 iced_fonts = { version = "0.3", features = ["fontawesome"] }
 self_update = { version = "0.42.0", features = ["rustls"], default-features = false }
 chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
 tracing = "0.1.44"
-tracing-subscriber = "0.3.22"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 semver = "1.0.27"
+libc = "0.2"
 
 [target.'cfg(target_env = "musl")'.dependencies]
 mimalloc = "0.1.43"
